[gd_scene load_steps=17 format=3 uid="uid://cnhqbyhb23xcr"]

[ext_resource type="PackedScene" uid="uid://b5a584lgtgr3v" path="res://Scenes/enemies/enemy_base/enemy_base.tscn" id="1_trbxm"]
[ext_resource type="Script" path="res://Scripts/enemies/jumpbot.gd" id="2_8qfkj"]
[ext_resource type="Texture2D" uid="uid://codgpsx31fqlv" path="res://Sprites/Enemies/Robots/Jumpbot/jumpbot_idle.png" id="2_pghe0"]
[ext_resource type="Texture2D" uid="uid://cdym7djx13hm2" path="res://Sprites/Enemies/Robots/Jumpbot/jumpbot_jump.png" id="4_lqnag"]
[ext_resource type="Texture2D" uid="uid://uxy4t7li8pik" path="res://Sprites/Enemies/Robots/Jumpbot/jumpbot_alarm.png" id="5_08nfb"]
[ext_resource type="Texture2D" uid="uid://bme71yq75fqy7" path="res://Sprites/Enemies/Robots/Jumpbot/jumpbot_aggressive.png" id="6_6vhn0"]

[sub_resource type="Animation" id="Animation_4ab1m"]
resource_name = "Aggressive"
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("6_6vhn0")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2D:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_yox7t"]
resource_name = "Alarm"
length = 1.7
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("5_08nfb")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [7]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2D:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4, 1.5, 1.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 5, 6, 5, 6, 5, 6, 5, 6, 5, 6]
}

[sub_resource type="Animation" id="Animation_pk365"]
resource_name = "Idle"
length = 1.6
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("2_pghe0")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [12]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2D:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.4, 0.5, 0.7, 0.8, 0.9, 1, 1.2, 1.3, 1.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11]
}

[sub_resource type="Animation" id="Animation_8dtjh"]
resource_name = "Jump"
length = 2.0
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("4_lqnag")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [15]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2D:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.6, 1.7, 1.8, 1.9),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14]
}

[sub_resource type="Animation" id="Animation_1ntfo"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("2_pghe0")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [12]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2D:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_1pom0"]
_data = {
"Aggressive": SubResource("Animation_4ab1m"),
"Alarm": SubResource("Animation_yox7t"),
"Idle": SubResource("Animation_pk365"),
"Jump": SubResource("Animation_8dtjh"),
"RESET": SubResource("Animation_1ntfo")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_nl4j8"]
size = Vector2(22, 38)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_yuxmq"]
size = Vector2(15.2, 12)

[sub_resource type="CircleShape2D" id="CircleShape2D_w47je"]
radius = 150.0

[sub_resource type="CircleShape2D" id="CircleShape2D_te8e5"]
radius = 250.0

[node name="Jumpbot" instance=ExtResource("1_trbxm")]
scale = Vector2(2.5, 2.5)
script = ExtResource("2_8qfkj")
value_specific = 3
hp_specific = 3

[node name="Sprite2D" parent="." index="0"]
position = Vector2(0, -24)
texture = ExtResource("2_pghe0")
hframes = 12

[node name="AnimationPlayer" parent="." index="1"]
libraries = {
"": SubResource("AnimationLibrary_1pom0")
}

[node name="Hitbox" parent="." index="2"]
position = Vector2(0, -18.8)

[node name="HitboxCollisionShape" parent="Hitbox" index="0"]
position = Vector2(0, -1.90735e-06)
shape = SubResource("RectangleShape2D_nl4j8")

[node name="FloorCollisionShape" parent="." index="3"]
position = Vector2(0, -6)
shape = SubResource("RectangleShape2D_yuxmq")
debug_color = Color(0.698434, 0.489127, 0.174317, 0.42)

[node name="DetectionArea" parent="." index="4"]
collision_layer = 0
collision_mask = 2

[node name="DetectionRadius" parent="DetectionArea" index="0"]
position = Vector2(0, -18.8)
shape = SubResource("CircleShape2D_w47je")
debug_color = Color(0.99698, 0, 0.185116, 0)

[node name="DetectionArea2" type="Area2D" parent="." index="5"]
collision_layer = 0
collision_mask = 2

[node name="DetectionRadius" type="CollisionShape2D" parent="DetectionArea2" index="0"]
position = Vector2(0, -18.8)
shape = SubResource("CircleShape2D_te8e5")
debug_color = Color(0.204828, 0.568959, 0.797177, 0)

[node name="JumpTimer" type="Timer" parent="." index="6"]
wait_time = 3.0
one_shot = true

[node name="JumpDelayTimer" type="Timer" parent="." index="7"]
one_shot = true

[connection signal="body_exited" from="DetectionArea" to="." method="_on_detection_area_body_exited"]
[connection signal="body_entered" from="DetectionArea2" to="." method="_on_detection_area_body_entered"]
[connection signal="body_exited" from="DetectionArea2" to="." method="_on_detection_area_2_body_exited"]
[connection signal="body_exited" from="DetectionArea2" to="." method="_on_detection_area_body_exited"]
[connection signal="timeout" from="JumpTimer" to="." method="_on_jump_timer_timeout"]
[connection signal="timeout" from="JumpDelayTimer" to="." method="_on_jump_delay_timer_timeout"]
